syntax = "proto3";

package protobuf;
option java_package = "com.romulojales.protobuf";
option java_multiple_files = true;

message PrimeRequest {
  int32 argument = 1;
}

message PrimeResponse {
  int32 prime_number = 1;
}

service PrimeServer {
  // This rpc will throw an exception if the number is lower than 2.
  rpc GetPrimes(PrimeRequest) returns ( stream PrimeResponse );
}
